@@ -1,3 +1,8 @@
+2005-01-26 Magnus Hagdorn
+ * glide_stop.f90: output some runtime statistics to log
+ * glimmer_temp.f90: optimise by reducing deep if clauses, avoiding
+ divisions, etc
+
 2005-01-22 Magnus Hagdorn
  * exponential temp parameterisation for eis_glide
 
